--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,9 +1,13 @@
+[build]
+target = "x86_64-ito_os.json"
+
 [unstable]
 build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
-[build]
-target = "x86_64-ito_os.json"
-
-[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))']
+[target.'cfg(all(target_arch = "x86_64", target_os = "none"))']
 runner = "bootimage runner"
+rustflags = [
+    "-C", "link-arg=-Tlinker.ld",
+    "-C", "link-arg=-zmax-page-size=0x1000",
+]
