--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,13 @@
 [package]
-name = "ito-os"
-version = "0.1.0"
+name = "ito_os"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-bootloader = "0.9.34"
-
-[package.metadata.bootimage]
-test-args = [
-    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
-    "-serial", "stdio",
-    "-display", "none"
-]
-run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]
+bootloader = "0.9.23"
+volatile = "0.2.6"
+spin = "0.9.8"
 
 [[bin]]
-name = "ito-os"
+name = "ito_os"
 path = "src/main.rs"
-test = false
